--- a/app/nginx/default.conf
+++ b/app/nginx/default.conf
@@ -1,4 +1,10 @@
-client_max_body_size 10m;
+
+## SECURITY
+# Don't send the nginx version number in error pages and Server header.
+server_tokens off;
+# To avoid DDOS
+limit_conn_zone $binary_remote_addr zone=ip_addr:10m;
+## SECURITY END
 
 upstream backend {
     server backend:8000;
@@ -6,32 +12,73 @@ upstream backend {
 
 upstream frontend {
     server frontend:8080;
+    keepalive 100;
 }
 
 server {
 
     listen 80;
+    listen [::]:80;
     root /usr/share/nginx/html;
     include /etc/nginx/mime.types;
+
+    ## SECURITY
+    # avoid DDOS in regard to limit_conn_zone
+    limit_conn ip_addr 1;
+    # enables server-side protection from BEAST attacks.
+    ssl_prefer_server_ciphers on;
+    # disable SSLv3(enabled by default since nginx 0.8.19) since it's less secure then TLS.
+    ssl_protocols TLSv1.2 TLSv1.3;
+    # ciphers chosen for forward secrecy and compatibility.
+    ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
+    # This header enables the Cross-site scripting (XSS) filter.
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    add_header X-Content-Type-Options nosniff;
+    # config to enable HSTS(HTTP Strict Transport Security).
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload";
+    # header to prevent clickjacking attacks.
+    add_header X-Frame-Options "SAMEORIGIN";
+    # Logging
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log debug;
+    ## SECURITY END
 
     # Vue frontend.
     location / {
         proxy_pass http://frontend;
+        autoindex off;
+        allow all;
     }
 
 
     # Django API.
-    location /api {
+    location /api/ {
         proxy_pass http://backend;
         autoindex off;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        # Docker-compose static IP network
+        allow 10.103.0.1/16;
+        deny all;
+    }
+
+    # Django admin.
+    location /admin {
+        proxy_pass http://backend;
+        autoindex off;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        # Docker-compose static IP network
+        allow 10.103.0.1/16;
+        deny all;
     }
 
     # Django static assests.
     location /static/ {
-        autoindex on;
+        autoindex off;
         alias /code/staticfiles/;
     }
 
